# apps/backend/book/model.go
@@ -1,0 +1,8 @@
+package book
+
+type Book struct {
+	ID     int    `json:"id"`
+	Title  string `json:"title" validate:"required"`
+	Author string `json:"author" validate:"required"`
+	Year   int    `json:"year" validate:"required"`
+}
